# Maycoon

./: .gitignore  Cargo.toml  README.md
examples/: hello-world.rs
may-core/: Cargo.toml
may-core/src/: canvas.rs  lib.rs  types.rs
may-core/src/app/: config.rs  mod.rs  page.rs  widget.rs
may-core/src/tests/: canvas.rs
may-core/src/widgets/: text.rs
src/: lib.rs
